// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/metadata-instance-editor/fields/ReadOnlyMetadataField should correctly render a date field 1`] = `
<dl
  className="bdl-ReadOnlyMetadataField"
>
  <dt />
  <dd>
    <FormattedDate
      day="numeric"
      month="long"
      value={2018-06-13T07:00:00.000Z}
      year="numeric"
    />
  </dd>
</dl>
`;

exports[`features/metadata-instance-editor/fields/ReadOnlyMetadataField should correctly render a string field 1`] = `
<dl
  className="bdl-ReadOnlyMetadataField"
>
  <dt />
  <dd>
    value
  </dd>
</dl>
`;

exports[`features/metadata-instance-editor/fields/ReadOnlyMetadataField should correctly render multi select field 1`] = `
<dl
  className="bdl-ReadOnlyMetadataField"
>
  <dt />
  <i
    className="bdl-ReadOnlyMetadataField-desc"
  >
    description
  </i>
  <dd>
    value
  </dd>
</dl>
`;

exports[`features/metadata-instance-editor/fields/ReadOnlyMetadataField should correctly render with description 1`] = `
<dl
  className="bdl-ReadOnlyMetadataField"
>
  <dt />
  <i
    className="bdl-ReadOnlyMetadataField-desc"
  >
    description
  </i>
  <dd>
    value
  </dd>
</dl>
`;
